// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`场景 1 · 启动（空态） **新会话，不接续**——空手打开没有会话，状态行报「新会话」 1`] = `
"交代一件事就开始。会话在你按下第一次回车时才建立。
比如：
　· 看看这个工作区里有什么
　· 把 src/utils/date.ts 的时区处理改成本地时区
　· 上次那个 bug 修到哪了？　（/session 接着上次）
────────────────────────────────────────────────────────────────────────────────────────────────────
 › 交代一件事，回车发送
 ○ 空闲 · 新会话                                                               / 命令 · ctrl+c 退出"
`;

exports[`场景 2 · 空闲（有历史） 三类行各就其位 ＋ 状态行四格 1`] = `
"› 看看这个工作区里有什么
⏺ 我先列一下。
● ls {"path":"."}
  ✓ 200ms · 14 项
⏺ 是个 Bun 工作区，packages 下六个包。
────────────────────────────────────────────────────────────────────────────────────────────────────
 › 交代一件事，回车发送
 ○ 空闲 · 记录查询优化 · MiniMax-M3 · 3.1k                                     / 命令 · ctrl+c 退出"
`;

exports[`场景 3 · 工作中（流式） 工具在跑——标记换 \`⟳\` ＋ 耗时；输入行说实话；右位报中断 1`] = `
"› 把 src/utils/date.ts 的时区处理改成本地时区
⏺ 先读一遍，看清它现在怎么算的——
⟳ read {"path":"src/utils/date.ts"}
  ⟳ 0ms
────────────────────────────────────────────────────────────────────────────────────────────────────
 › （工作中——想插话可以打，发不出去就排队）
 ● 工作中 · 时区修正 · MiniMax-M3                                                       ctrl+c 中断"
`;

exports[`场景 4 · 待裁决（轻） 黄线 ＋ 材料内联 ＋ 三键（含 \`a\`）；输入行只报「等你的答复」 1`] = `
"› 跑一下测试看看现在什么情况
⏺ 要跑 bun test——这条命令没配过规则，请一下。
────────────────────────────────────────────────────────────────────────────────────────────────────

 │ exec · 可逆
 │ 命令 bun test · 只读（不写工作区）
 │ y 批准　a 本工作区总是允许　n 拒绝
 › 等你的答复
 ● 等你定夺 · 记录查询优化                                                                y / a / n"
`;

exports[`场景 5 · 待裁决（重） 红线 ＋ **\`a\` 划掉**（不是藏起来）；右位只剩 \`y / n\` 1`] = `
"› 把 user_version 抬到 1，旧库的迁移也补上
────────────────────────────────────────────────────────────────────────────────────────────────────

 │ write · 不可逆
 │ 目标 src/records/db.ts · 影响面 覆盖已有文件（132 行将变）
 │ - const v = 0
 │ + const v = 1
 │ y 批准　a 本工作区总是允许　n 拒绝
 › 等你的答复
 ● 等你定夺 · 时区修正                                                                        y / n"
`;

exports[`场景 6 · 接管 · 按了非答复键 忽略但**当场说一句**（\`▲ …\`）；其余照旧 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────

 │ write · 不可逆
 │ 覆盖 src/records/db.ts
 │ y 批准　a 本工作区总是允许　n 拒绝
 › 等你的答复
▲ 先答复——「x」此刻不管用（这一轮在等你）。草稿在，答完接着打。
 ● 等你定夺 · 记录查询优化                                                                    y / n"
`;

exports[`场景 7 · 多件裁决 件数报**两处**：卡的标题 \`2 / 3\` 与状态行 \`2/3\` 1`] = `
"⟳ write {"path":"a"}
  ⟳ 0ms
⟳ write {"path":"b"}
  ⟳ 0ms
⟳ write {"path":"c"}
  ⟳ 0ms
────────────────────────────────────────────────────────────────────────────────────────────────────

 │ write · 可逆 · 2 / 3
 │ 目标 README.md · 影响面 覆盖（新增 12 行）
 │ y 批准　a 本工作区总是允许　n 拒绝
 › 等你的答复
 ● 等你定夺 2/3 · 时区修正                                                                y / a / n"
`;

exports[`场景 8 · 答完之后 回执一行 · 下一件接上 · 草稿归还（不自动发送） 1`] = `
"● write {"path":"src/records/db.ts"}
  ✓ 1.2s · 写好了
⟳ write {"path":"README.md"}
  ⟳ 0ms
────────────────────────────────────────────────────────────────────────────────────────────────────

 │ write · 可逆 · 2 / 2
 │ 目标 README.md
 │ y 批准　a 本工作区总是允许　n 拒绝
 › 等你的答复
 ● 等你定夺 2/2 · 时区修正                                                                y / a / n"
`;

exports[`场景 9 · \`/session\`（交互配置型） 回车**不进记录区**，只在左下开选择器；列表带当前位与说明 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
  1 记录查询优化　正在用
  2 修复时区处理…
  3 给 CI 加缓存
 ○ 空闲 · 记录查询优化                                                   ↑↓ 选 · 回车 定 · esc 收起"
`;

exports[`场景 10 · \`/model\`（同一处、同一开合） 列表报条目与模型名；回执留一行 1`] = `
"· 换模型未成：不知道要换成什么——已注册：minimax
────────────────────────────────────────────────────────────────────────────────────────────────────
  1 minimax　MiniMax-M3
 　不知道要换成什么——已注册：minimax
 ○ 空闲 · 修复时区处理… · MiniMax-M3                                     ↑↓ 选 · 回车 定 · esc 收起"
`;

exports[`场景 11 · \`/help\`（纯输出型） 输出进记录区（dim 块）；**命令本身不回显** 1`] = `
"· 已换模型 → MiniMax-M2
可用命令
/session　会话：列表 · 切换 · 新建 · 改名
/status　看这一趟用了多少、模型是谁
/model　换模型（列出可用条目，选定即切）
/help　这张表
────────────────────────────────────────────────────────────────────────────────────────────────────
› /help　这张表
 › 交代一件事，回车发送
 ○ 空闲 · 时区修正 · MiniMax-M2                                         ↑↓ 选 · Tab 补全 · esc 收起"
`;

exports[`场景 12 · 切换 / 恢复后——重建，且是收拢的 条目重建出记录区；工具两条并一行；屏上痕迹不回 1`] = `
"› 看看这个工作区里有什么
⏺ 我先列一下。
● ls {"path":"."}
  ✓ 14 项
⏺ 是个 Bun 工作区，packages 下六个包。
────────────────────────────────────────────────────────────────────────────────────────────────────
› /help　这张表
 › 交代一件事，回车发送
 ○ 空闲 · 时区修正                                                      ↑↓ 选 · Tab 补全 · esc 收起"
`;

exports[`场景 13 · 退避重试 状态词换 \`● 正在重试 2/3\`，右位报「几秒后重发」；输入行说实话 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
 › （等模型回来——不用管，退避重试会自动重发）
 ● 正在重试 2/3 · 时区修正                                                     1.6s 后重发 · 不用管"
`;

exports[`场景 14 · 窄窗口降级 从右往左省（用量 → 模型 → 标题截断）；**省了不改剩余字段的位置** 1`] = `
"› 看看这个工作区里有什么
⏺ 我先列一下。
● ls {"path":"."}
  ✓ 200ms · 14 项
⏺ 是个 Bun 工作区，packages 下六个包。
──────────────────────────────────────────────
 › 交代一件事，回车发送
 ○ 空闲 · 记录查询优化   / 命令 · ctrl+c 退出"
`;

exports[`规格细节（渲染层） **收拢**：更早的组并成一行摘要，最近一组逐条展开（原型 · 场景 12） 1`] = `
"› 看看有什么
● 3 次工具调用（ls · read · grep）
› 再看看
● write {}
  ✓ 成
────────────────────────────────────────────────────────────────────────────────────────────────────
 › 交代一件事，回车发送
 ○ 空闲 · 时区修正                                                             / 命令 · ctrl+c 退出"
`;

exports[`场景 11 · slash 自动补全 打 \`/s\` —— 候选列在输入行**上方**，\`/session\` 与 \`/status\` 在前（按匹配度） 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
› /session　会话：列表 · 切换 · 新建 · 改名
  /status　看这一趟用了多少、模型是谁
 › /s
 ○ 空闲 · 记录查询优化                                                  ↑↓ 选 · Tab 补全 · esc 收起"
`;
